--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       discovery.type: "single-node"
       http.host: "0.0.0.0"
       action.auto_create_index: "false"
+    deploy:
+      resources:
+        limits:
+          memory: 1500M
     image: "docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2"
     ulimits:
       memlock:
