--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,11 @@ services:
 
   elasticsearch:
     environment:
-      ES_JAVA_OPTS: "-Xms1g -Xmx1g -Dlog4j2.formatMsgNoLookups=true"
+      ES_JAVA_OPTS: "-Xms512m -Xmx512m -Dlog4j2.formatMsgNoLookups=true"
       bootstrap.memory_lock: "true"
       discovery.type: "single-node"
       http.host: "0.0.0.0"
       action.auto_create_index: "false"
-    deploy:
-      resources:
-        limits:
-          memory: 1500M
     image: "docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2"
     ulimits:
       memlock:
