edited docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     volumes:
       - "graylog_data:/usr/share/graylog/data/data"
       - "graylog_journal:/usr/share/graylog/data/journal"
-      - "/root/projects/graylog/graylog-credentials:/graylog-credentials"
+      - "/root/projects/graylog/graylog-credentials:graylog-credentials"
     restart: "on-failure"
 volumes:
   mongodb_data:
